@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.39 2012/08/31 14:25:49 wiz Exp $
+# $NetBSD: Makefile,v 1.40 2012/10/28 06:31:06 asau Exp $
 
 DISTNAME=	tidy-20091027
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	www
 MASTER_SITES=	# manually created tarballs on ftp.NetBSD.org only
 
@@ -29,7 +29,7 @@ INSTALLATION_DIRS=	${PKGMANDIR}/man1
 PLIST_SRC+=		${PKGDIR}/PLIST
 
 .if !empty(PKG_OPTIONS:Mdoc)
-BUILD_DEPENDS+= doxygen>=1.8.2:../../devel/doxygen
+BUILD_DEPENDS+= doxygen>=1.8.3.1:../../devel/doxygen
 
 HTML_DOCFILES=	Overview.html doxygen.cfg grid.gif tidy.css faq.html \
 		license.html pending.html release-notes.html tidy.gif
